Bug 140934 - Dropdrown button is comment is black
Summary: Dropdrown button is comment is black
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, regression
: 140933 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-03-10 08:45 UTC by Xisco Faulí
Modified: 2021-05-10 16:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (4.39 KB, image/png)
2021-03-10 08:45 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-03-10 08:45:08 UTC
Created attachment 170387 [details]
screenshot

Steps to reproduce:
1. Open Writer
2. Insert a comment

-> The dropdown button is black. See screenshot

Reproduced in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 3dfe1df0f1084b06c7d4c95df387253b2e058cd6
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

also reproduced in GEN
Comment 1 Xisco Faulí 2021-03-10 08:46:17 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=d3765ec240eca85a72c6940a5e19bb82d65cad03

author	Caolán McNamara <caolanm@redhat.com>	2021-02-19 10:52:49 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2021-02-19 15:55:33 +0100
commit d3765ec240eca85a72c6940a5e19bb82d65cad03 (patch)
tree 0ec9c39f2fa5fede4029b730e389535b609527ca
parent baddf594428a2e6cb011d3e1c710f380ec02d594 (diff)
Related: tdf#140409 scale the menubutton like the other widgets

Bisected with: bibisect-linux64-7.2

Adding Cc: to Caolán McNamara
Comment 2 Xisco Faulí 2021-03-10 08:55:29 UTC
*** Bug 140933 has been marked as a duplicate of this bug. ***
Comment 3 Caolán McNamara 2021-03-10 16:39:21 UTC
odd that I didn't notice something that obvious at the time, but it is indeed black
Comment 4 Caolán McNamara 2021-03-10 17:02:42 UTC
ah, because I was testing with documents with comments in them and the bg colors were already set at the time of drawing the menubutton but on inserting a new one the correct color isn't set yet
Comment 5 Commit Notification 2021-03-11 13:29:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/47ad7497f736b27c23667e0754cd686b78b60744

tdf#140934 update annotation menubutton bg when comment color changes

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2021-05-10 16:06:35 UTC
Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: d4f116d9576453f5974eb63db37a33c59ac53bc9
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!