tdf#140934 update annotation menubutton bg when comment color changes

Change-Id: Ia4d10a8f19c039655dbe28c5f612061ce3755afa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/112278
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 47ad7497f736b27c23667e0754cd686b78b60744)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117754
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Andras Timar <andras.timar@collabora.com>