sw/inc/AnnotationWin.hxx
@@ -223,6 +223,8 @@ class SAL_DLLPUBLIC_RTTI SwAnnotationWin : public InterimItemWindow
 
         SvxLanguageItem GetLanguage() const;
 
+        void SetMenuButtonColors();
+
         SwPostItMgr&    mrMgr;
         SwView&         mrView;
 
